--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
     "socketio-file-upload": "^0.7.0"
   },
