--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.6",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
